# WyrmEngine

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
WyrmRenderer/: CMakeLists.txt  compile_slang.py  get_vma.py
WyrmRenderer/include/: CMakeLists.txt  WRenderer.h
WyrmRenderer/src/: CMakeLists.txt  WRenderer.cpp
WyrmRenderer/src/shaders/: CMakeLists.txt  compile_slang.py  shader.slang
include/: CMakeLists.txt  WEngine.h
src/: CMakeLists.txt  Structs.h  VulkanInit.cpp  WEngine.cpp
src/shaders/: CMakeLists.txt  compile_slang.py  shader.slang  shader.spv
